testing/tests/melt/negative/lvalues_20.c

int main() 
{
    int n = 0++; // Increment requires an lvalue
    return 0;
}
